Update Error Prone version (#472)
* Update Error Prone version

* Fix compile